[package]
name = "anime-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
console = "0.15.8"
error-stack = "0.4.1"
indicatif = "0.17.8"
inquire = "0.7.5"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["cookies", "stream"] }
sanitize-filename = "0.5.0"
scraper = "0.19.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = "0.1.15"
url = "2.5.1"
urlencoding = "2.1.3"
